After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745321 - shift+delete no longer works in nautilus 3.15.x
shift+delete no longer works in nautilus 3.15.x
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-28 11:27 UTC by Elad Alfassa
Modified: 2015-02-28 20:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nautilus-view: always allow to permanently delete (8.49 KB, patch)
2015-02-28 20:17 UTC, Carlos Soriano
none Details | Review
nautilus-view: always allow to permanently delete (8.44 KB, patch)
2015-02-28 20:18 UTC, Carlos Soriano
none Details | Review

Description Elad Alfassa 2015-02-28 11:27:09 UTC
I'm not sure if this one is a bug or by design, but it seems that in nautilus 3.15.x shift+delete does nothing.
Comment 1 Carlos Soriano 2015-02-28 19:16:14 UTC
(In reply to Elad Alfassa from comment #0)
> I'm not sure if this one is a bug or by design, but it seems that in
> nautilus 3.15.x shift+delete does nothing.

Hi,

It's only available if you enable it in the settings.
We had a setting for that before, but seems we were only deactivating the menu item but not the shortcut, which seems inconsistent.

Maybe we can enable it always but never show a menu item and remove the setting?
Comment 2 Elad Alfassa 2015-02-28 19:41:56 UTC
I didn't expect there to be a setting for this (it used to "just work" for me before).

I also don't think there should ever be a menu item for this - it's a destructive operation with no option to undo. The keyboard combo, however, is much less likely to be used accidentally, so I don't think it should be disabled.

It'd probably be best if you ask the designers about this, they'll know what's the right thing to do.
Comment 3 Carlos Soriano 2015-02-28 20:17:40 UTC
Created attachment 298189 [details] [review]
nautilus-view: always allow to permanently delete

Before 3.15 we had a setting for adding a menu item for permanent
deletion of files. But the shortcut was always enabled no matter the
state of the setting, which seems inconsistent.

Then with the GAction port we changed that behavior to be consistent,
but people that were unaware of the setting were complaining that
the shortcut for permanent deletion was not working.

Given that we show a dialog if we hit that shortcut, and the setting
itself is confusing, just enable always the shortcut but remove the
setting and the menu item for it.

https://bugzilla.gnome.org/show_bug.cgi?id=645089
Comment 4 Carlos Soriano 2015-02-28 20:18:38 UTC
Created attachment 298190 [details] [review]
nautilus-view: always allow to permanently delete

Before 3.15 we had a setting for adding a menu item for permanent
deletion of files. But the shortcut was always enabled no matter the
state of the setting, which seems inconsistent.

Then with the GAction port we changed that behavior to be consistent,
but people that were unaware of the setting were complaining that
the shortcut for permanent deletion was not working.

Given that we show a dialog if we hit that shortcut, and the setting
itself is confusing, just enable always the shortcut but remove the
setting and the menu item for it.
Comment 5 Carlos Soriano 2015-02-28 20:21:35 UTC
Attachment 298190 [details] pushed as 655e415 - nautilus-view: always allow to permanently delete